--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,18 @@ input[type=button], #close {
 .removeButton:hover {
     background-color: rgb(173, 0, 0);
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 8px;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: transparent;
+}
